css file modified

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ main {
     text-align: center;
 }
 
-.thumnails figure [src="/images/game.JPG"] {
+.thumnails figure [src="/images/1to50.jpg"] {
     width: 500px;
     height: 700px;
     padding: 20px;
