--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ main {
     text-align: center;
 }
 
-.thumnails figure [src="./images/1to50__img"] {
+.thumnails figure [src="./images/1to50__img.jpg"] {
     width: 500px;
     height: 700px;
     padding: 20px;
